--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
 <head>
     <meta charset="utf-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <title>CloudDream云梦谷官网 - 主页</title>
+    <title>Cuberite Minecraft服务器联盟 - 主页</title>
     <meta name="description" content="">
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <meta name="robots" content="all,follow">
@@ -32,7 +32,7 @@
     <header class="header">
         <nav class="navbar navbar-expand-lg fixed-top">
             <img class="logo" src="img/logo.png" alt="">
-            <a href="/index.html" class="navbar-brand">CloudDream云梦谷MC服务器</a>
+            <a href="/index.html" class="navbar-brand">Cuberite Minecraft服务器联盟</a>
             <button type="button" data-toggle="collapse" data-target="#navbarSupportedContent"
                 aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation"
                 class="navbar-toggler navbar-toggler-right">
@@ -46,21 +46,27 @@
                         <a href="#welcome" class="nav-link link-scroll"><i class="fas fa-home"></i>首页</a>
                     </li>
                     <li class="nav-item">
-                        <a href="#game-play" class="nav-link link-scroll"><i class="fas fa-gamepad"></i>玩法</a>
-                    </li>
-                    <li class="nav-item">
-                        <a href="#about-us" class="nav-link link-scroll"><i class="fas fa-info"></i>关于我们</a>
+                        <a href="#about-us" class="nav-link link-scroll"><i class="fas fa-gamepad"></i>关于我们</a>
                     </li>
                     <li class="nav-item dropdown">
-                        <a href="#" class="nav-link dropdown-toggle" id="navbarDropdown" role="button"
+                        <a href="#our-projects" class="nav-link dropdown-toggle" id="navbarDropdown" role="button"
                             data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
-                            <i class="fas fa-link" aria-hidden="true"></i>其他
+                            <i class="fas fa-link" aria-hidden="true"></i>我们的项目
+                        </a>
+                        <div class="dropdown-menu dropdown-menu-right animate__animated"
+                            aria-labelledby="navbarDropdown">
+                            <a class="dropdown-item" href="https://wiki.cuberite.dfggmc.top/">Cuberite中文维基</a>
+                    </li>
+                    <li class="nav-item dropdown">
+                        <a href="#more" class="nav-link dropdown-toggle" id="navbarDropdown" role="button"
+                            data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
+                            <i class="fas fa-link" aria-hidden="true"></i>更多
                         </a>
                         <div class="dropdown-menu dropdown-menu-right animate__animated"
                             aria-labelledby="navbarDropdown">
                             <a class="dropdown-item" href="/page/sponsored-list.html">赞助名单</a>
-                            <a class="dropdown-item" href="/page/server-history.html">更新日志</a>
-                            <a class="dropdown-item" href="https://github.com/peg195-dfgg/CloudDream-Website/">网站源码</a>
+                            <a class="dropdown-item" href="/page/server-history.html">服务器列表</a>
+                            <a class="dropdown-item" href="https://github.com/Cuberite-Minecraft-Server-Alliance/CMSA-Official-website/">网站源码</a>
                     </li>
                 </ul>
             </div>
@@ -72,92 +78,40 @@
         <div class="container">
             <div class="row d-flex">
                 <div class="col-lg-6 text order-2 order-lg-1">
-                    <h1>欢迎来到 CloudDream云梦谷MC服务器官网</h1>
+                    <h1>欢迎来到Cuberite Minecraft服务器联盟官网</h1>
                     <p class="welcome-text">
-                        1.8.0 ~ 1.20.4全版本互通插件服务器
+                        一个专门交流学习Cuberite服务端的一个Minecraft服务器组织
                     </p>
                     <div class="CTA">
-                        <a href="#game-play" class="btn btn-primary btn-shadow btn-gradient link-scroll">
+                        <a href="#about-us" class="btn btn-primary btn-shadow btn-gradient link-scroll">
                             开始了解！
                         </a>
-                        <a href="http://qm.qq.com/cgi-bin/qm/qr?_wv=1027&k=ddOQLJrhzfp1ERBHFddCOWjjQHFJfjn4&authKey=o4u9eWaTqHB4Hr%2BMHPvyzSEkYE%2B0TNvXsioVVn64I5djALzlq2Y4HqarH2hFcbBF&noverify=0&group_code=697780476" target="_blank" class="btn btn-outline-primary">
+                        <a href="https://qm.qq.com/cgi-bin/qm/qr?k=bhOaDateLqpKbhzG0bWhQb8_MDP4h56V&jump_from=webapi&authKey=E1ApTtWnznDPk4ogOvg2AHapOj8WniwZ9BetgyCGsxru+JUQj28/YmZyr2JldyWH">
                             立即加入我们
                         </a>
                     </div>
                 </div>
                 <div class="col-lg-6 order-1 order-lg-2">
-                        <iframe style="width: 100%; height: 100%;" src="//player.bilibili.com/player.html?aid=1703430441&bvid=BV1ET421y7md&cid=1514956742&p=1" scrolling="no" border="0" frameborder="no" framespacing="0" allowfullscreen="true"> </iframe>
+                        
                 </div>
             </div>
         </div>
     </section>
 
-    <section id="game-play" class="game-play bg-gray">
-        <div class="container">
-            <div class="row d-flex justify-content-center">
-                <div class="col-lg-8 text-center">
-                    <h2 class="h3 mb-5"><i class="fas fa-solid fa-earth-americas"></i>多玩法 | 总有一个是您喜欢的！</h2>
-                    <div class="game-play-mockup">
-                        <div id="nav-tabContent" class="tab-content">
-                            <div id="nav-first" role="tabpanel" aria-labelledby="nav-first-tab"
-                                class="tab-pane fade show active">
-                                <img src="/img/插件生存.png" alt="插件生存" title="插件生存"
-                                    class="img-fluid">
-                            </div>
-                            <div id="nav-second" role="tabpanel" aria-labelledby="nav-second-tab" class="tab-pane fade">
-                                <img src="img/空岛生存.png" alt="空岛生存" title="空岛生存"
-                                    class="img-fluid">
-                            </div>
-                            <div id="nav-third" role="tabpanel" aria-labelledby="nav-third-tab" class="tab-pane fade">
-                                <img src="img/心跳水立方.png" alt="..." class="img-fluid">
-                            </div>
-                        </div>
-                    </div>
-                </div>
-            </div>
-            <div role="tablist" class="nav nav-tabs">
-                <div class="row">
-                    <div class="col-md-4">
-                        <a id="nav-first-tab" data-toggle="tab" href="#nav-first" role="tab" aria-controls="nav-first"
-                            aria-expanded="true" class="nav-item nav-link active">
-                            <span class="number">1</span>插件生存 - 体验多样化游戏玩法
-                        </a>
-                    </div>
-                    <div class="col-md-4">
-                        <a id="nav-second-tab" data-toggle="tab" href="#nav-second" role="tab"
-                            aria-controls="nav-second" class="nav-item nav-link">
-                            <span class="number">2</span>空岛生存 - 挑战高空孤岛生存模式
-                        </a>
-                    </div>
-                    <div class="col-md-4">
-                        <a id="nav-third-tab" data-toggle="tab" href="#nav-third" role="tab" aria-controls="nav-third"
-                            class="nav-item nav-link">
-                            <span class="number">3</span>心跳水立方 - 挑战落入水池
-                        </a>
-                    </div>
-                    <div class="col-md-12 text-center mt-4">
-                        <a target="_blank" href="http://qm.qq.com/cgi-bin/qm/qr?_wv=1027&k=ddOQLJrhzfp1ERBHFddCOWjjQHFJfjn4&authKey=o4u9eWaTqHB4Hr%2BMHPvyzSEkYE%2B0TNvXsioVVn64I5djALzlq2Y4HqarH2hFcbBF&noverify=0&group_code=697780476"><i
-                                class="fa fa-solid fa-right-to-bracket"></i>更多请加入QQ群</a>
-                    </div>
-                </div>
-            </div>
-        </div>
-    </section>
 
     <section id="about-us" class="about-us">
         <div class="container">
             <h2>关于我们</h2>
             <div class="row">
                 <p class="lead col-lg-10">
-                    这是一个1.8.0 ~ 1.20.4全版本互通插件服务器
-                    <br>
-                    由 YEE 运维
-                </p>
-                <p class="lead col-lg-10">
-                    <img src="img/服主头像.jpg" alt="服主头像.jpg" title="服主头像.jpg" class="img-fluid rounded">
+                    欢迎加入Cuberite Minecraft服务器联盟!
+                    <br />
+                    这是一个专门交流学习Cuberite服务端的一个Minecraft服务器组织，你可以在这里谈天说地，得到常规服务端和Cuberite服务端的问题解答，不止Cuberite!
+                    <br />
+                    也欢迎大家分享自己的Cuberite服务器，让更多人认识并学习到Cuberite!
                 </p>
             </div>
-            <a href="http://qm.qq.com/cgi-bin/qm/qr?_wv=1027&k=ddOQLJrhzfp1ERBHFddCOWjjQHFJfjn4&authKey=o4u9eWaTqHB4Hr%2BMHPvyzSEkYE%2B0TNvXsioVVn64I5djALzlq2Y4HqarH2hFcbBF&noverify=0&group_code=697780476" target="_blank"
+            <a href="https://qm.qq.com/cgi-bin/qm/qr?k=bhOaDateLqpKbhzG0bWhQb8_MDP4h56V&jump_from=webapi&authKey=E1ApTtWnznDPk4ogOvg2AHapOj8WniwZ9BetgyCGsxru+JUQj28/YmZyr2JldyWH"
                 class="btn btn-primary btn-shadow btn-gradient">了解更多！</a>
         </div>
     </section>
@@ -170,7 +124,6 @@
             <i class="fa-solid fa-arrow-up-long"></i>返回顶部
         </div>
     </div>
-    <div id="music-player-container"></div>
     <div id="footer"></div>
     <script src="js/jquery.min.js"></script>
     <script src="js/deb46094a2.js" crossorigin="anonymous"></script>
