--- a/common/footer.html
+++ b/common/footer.html
@@ -23,7 +23,7 @@
                         <a href="#">Cuberite Minecraft服务器联盟</a>
                     </li>
                     <li>
-                        <a href="https://space.bilibili.com/518222861">服主b站首页</a>
+                        <a href="https://space.bilibili.com/518222861">盟主b站首页</a>
                     </li>
                     <li>
                         <a href="https://wiki.cuberite.dfggmc.top/">Cuberite中文维基</a>
