--- a/index.html
+++ b/index.html
@@ -65,7 +65,7 @@
                         <div class="dropdown-menu dropdown-menu-right animate__animated"
                             aria-labelledby="navbarDropdown">
                             <a class="dropdown-item" href="/page/sponsored-list.html">赞助名单</a>
-                            <a class="dropdown-item" href="/page/server-history.html">服务器列表</a>
+                            <a class="dropdown-item" href="https://cmsa-server-list.dfggmc.top/">服务器列表</a>
                             <a class="dropdown-item" href="https://github.com/Cuberite-Minecraft-Server-Alliance/CMSA-Official-website/">网站源码</a>
                     </li>
                 </ul>
