--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
     <!-- Custom stylesheet-->
     <link rel="stylesheet" href="css/custom.css">
     <!-- Favicon-->
-    <link rel="shortcut icon" href="/img/logo.png">
+    <link rel="shortcut icon" href="https://peg195-image.pages.dev/Cuberite-logo.png">
     <!-- animate.css -->
     <link href="css/animate.min.css" rel="stylesheet">
 </head>
@@ -31,7 +31,7 @@
     <!-- 导航栏 -->
     <header class="header">
         <nav class="navbar navbar-expand-lg fixed-top">
-            <img class="logo" src="img/logo.png" alt="">
+            <img class="logo" src="https://peg195-image.pages.dev/Cuberite-logo.png" alt="">
             <a href="/index.html" class="navbar-brand">Cuberite Minecraft服务器联盟</a>
             <button type="button" data-toggle="collapse" data-target="#navbarSupportedContent"
                 aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation"
