--- a/common/footer.html
+++ b/common/footer.html
@@ -26,7 +26,7 @@
                         <a href="https://space.bilibili.com/518222861">盟主b站首页</a>
                     </li>
                     <li>
-                        <a href="https://wiki.cuberite.dfggmc.top/">Cuberite中文维基</a>
+                        <a href="https://ccw.dfggmc.top/">Cuberite中文文档</a>
                     </li>
                 </ul>
             </div>
